--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora Alqueire</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="build/styles/main.css">
 </head>
 <body>
-    <h1>Título Exemplo</h1>
-    <h2>Segundo título</h2>
-    <p>Texto</p>
+    <h1>Calculadora de Alqueire:</h1>
+    <section class="container-main">
+        <img src="images/computer-image.svg" alt="Imagem de um homem usando um computador." id="main-image">
+        <section class="container-calc">
+            <h2>Converter hectare para alqueire:</h2>
+
+            <span class="enter"><i class="fa-solid fa-ruler-vertical"></i><input id="hectare" type="number" placeholder="1" max="100" maxlength="4">Ha</span>
+
+            <span class="enter"><p>São </p><p id="alqueire">9.68</p><p>Alqueire</p></span>
+
+            <span>
+                BA<input id="BA" type="radio" name="state" checked="true">
+                RO<input id="RO" type="radio" name="state">
+                GO<input id="GO" type="radio" name="state">
+                SP<input id="SP" type="radio" name="state">
+            </span>
+
+            <input class="button-calc" type="button" value="Calcular" onclick="alq_calculum()">
+
+            <section class="social-media-images">
+                <span><img src="images/github.svg" alt="Github"></span>
+                <span><img src="images/instagram.svg" alt="Instagram"></span>
+                <span><img src="images/linkedin.svg" alt="LinkedIn"></span>
+                <span><img src="images/mail.svg" alt="E-mail"></span>
+            </section>
+        </section>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
